--- a/static/process.ipynb
+++ b/static/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "[57495 rows x 18 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,9 +389,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:               HOURWAGE   R-squared:                       0.117\n",
+      "Model:                            OLS   Adj. R-squared:                  0.117\n",
+      "Method:                 Least Squares   F-statistic:                     2533.\n",
+      "Date:                Thu, 07 Mar 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        22:17:07   Log-Likelihood:            -2.7023e+05\n",
+      "No. Observations:               57495   AIC:                         5.405e+05\n",
+      "Df Residuals:                   57491   BIC:                         5.405e+05\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===================================================================================\n",
+      "                      coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------\n",
+      "const             -16.3064      0.610    -26.731      0.000     -17.502     -15.111\n",
+      "EDUC                3.6208      0.044     82.999      0.000       3.535       3.706\n",
+      "RACE_Black         -0.0658      2.142     -0.031      0.976      -4.264       4.132\n",
+      "EDUC_RACE_Black    -0.3298      0.157     -2.097      0.036      -0.638      -0.021\n",
+      "==============================================================================\n",
+      "Omnibus:                    61922.103   Durbin-Watson:                   1.905\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):         10915319.626\n",
+      "Skew:                           5.178   Prob(JB):                         0.00\n",
+      "Kurtosis:                      69.702   Cond. No.                         273.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
