--- a/static/process.ipynb
+++ b/static/process.ipynb
@@ -3594,7 +3594,370 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "<script>\n",
+    "    import { onMount } from 'svelte';\n",
+    "    import { writable } from 'svelte/store';\n",
+    "    import * as d3 from 'd3';\n",
+    "    import { base } from '$app/paths';\n",
+    "  \n",
+    "    let outjsonData = writable([]);\n",
+    "    let filteredData = [];\n",
+    "    let ageSelected = writable(25); // Default value\n",
+    "    let educSelected = writable(10); // Default value\n",
+    "    function renderLatex() {\n",
+    "    const options = {\n",
+    "      throwOnError: false\n",
+    "      };\n",
+    "      katex.render(`\\\\text{Predicted Wage for White Individuals: } Wage = ${intercept} + (${coef_educ} \\\\times Education)`, document.getElementById('wageWhiteEq'), options);\n",
+    "      katex.render(`\\\\text{Predicted Wage for Black Individuals: } Wage = ${intercept} + (${coef_educ} \\\\times Education) + ${coef_race_black} + (${coef_educ_race_black} \\\\times Education)`, document.getElementById('wageBlackEq'), options);\n",
+    "    }\n",
+    "    onMount(async () => {\n",
+    "      const response = await fetch(`${base}/output.json`);\n",
+    "      outjsonData.set(await response.json());\n",
+    "      renderLatex();\n",
+    "\n",
+    "      drawCombinedGraph();\n",
+    "    });\n",
+    "    ///////\n",
+    "    let intercept = -16.3064; // placeholder for intercept from the model\n",
+    "    let coef_educ = 3.6208; // placeholder for education coefficient from the model\n",
+    "    let coef_race_black = -0.0658; // placeholder for race (Black) coefficient from the model\n",
+    "    let coef_educ_race_black = -0.3298;\n",
+    "    let educationLevel = writable();\n",
+    "\n",
+    "    // Function to calculate predicted hourly wage for White individuals\n",
+    "    function predictWageWhite(education) {\n",
+    "      return intercept + coef_educ * education;\n",
+    "    }\n",
+    "\n",
+    "    // Function to calculate predicted hourly wage for Black individuals\n",
+    "    function predictWageBlack(education) {\n",
+    "      return intercept + coef_educ * education + coef_race_black + coef_educ_race_black * education;\n",
+    "    }\n",
+    "    function drawCombinedGraph() {\n",
+    "    // Clear existing graph\n",
+    "    d3.select(\"#chart\").selectAll(\"*\").remove();\n",
+    "\n",
+    "    const svgWidth = 500;\n",
+    "    const svgHeight = 450;\n",
+    "    const margin = {top: 40, right: 30, bottom: 70, left: 60},\n",
+    "          width = svgWidth - margin.left - margin.right,\n",
+    "          height = svgHeight - margin.top - margin.bottom;\n",
+    "\n",
+    "    const svg = d3.select(\"#chart\")\n",
+    "                  .attr(\"width\", svgWidth)\n",
+    "                  .attr(\"height\", svgHeight)\n",
+    "                  .append(\"g\")\n",
+    "                  .attr(\"transform\", `translate(${margin.left},${margin.top})`);\n",
+    "\n",
+    "    // Data generation for both lines\n",
+    "    let data = d3.range(0, 21).map(function(d) {\n",
+    "      return {education: d, wageWhite: intercept + coef_educ * d, wageBlack: intercept + coef_educ * d + coef_race_black + coef_educ_race_black * d};\n",
+    "    });\n",
+    "\n",
+    "    // Add X axis\n",
+    "    const x = d3.scaleLinear()\n",
+    "      .domain([0, 20])\n",
+    "      .range([ 0, width ]);\n",
+    "    svg.append(\"g\")\n",
+    "      .attr(\"transform\", `translate(0, ${height})`)\n",
+    "      .call(d3.axisBottom(x))\n",
+    "      .append(\"text\")\n",
+    "      .attr(\"x\", width / 2)\n",
+    "      .attr(\"y\", 40)\n",
+    "      .attr(\"fill\", \"black\")\n",
+    "      .style(\"text-anchor\", \"middle\")\n",
+    "      .text(\"Years of Education\");\n",
+    "\n",
+    "    // Add Y axis\n",
+    "    const y = d3.scaleLinear()\n",
+    "      .domain([-20, d3.max(data, d => Math.max(d.wageWhite, d.wageBlack))])\n",
+    "      .range([ height, 0 ]);\n",
+    "    svg.append(\"g\")\n",
+    "      .call(d3.axisLeft(y))\n",
+    "      .append(\"text\")\n",
+    "      .attr(\"transform\", \"rotate(-90)\")\n",
+    "      .attr(\"y\", -40)\n",
+    "      .attr(\"x\", -height / 2)\n",
+    "      .attr(\"dy\", \"1em\")\n",
+    "      .attr(\"fill\", \"black\")\n",
+    "      .style(\"text-anchor\", \"middle\")\n",
+    "      .text(\"Predicted Wage\");\n",
+    "\n",
+    "    // Line generators\n",
+    "    const lineWhite = d3.line()\n",
+    "      .x(d => x(d.education))\n",
+    "      .y(d => y(d.wageWhite));\n",
+    "\n",
+    "    const lineBlack = d3.line()\n",
+    "      .x(d => x(d.education))\n",
+    "      .y(d => y(d.wageBlack));\n",
+    "\n",
+    "    // Draw lines\n",
+    "    svg.append(\"path\")\n",
+    "      .datum(data)\n",
+    "      .attr(\"fill\", \"none\")\n",
+    "      .attr(\"stroke\", \"steelblue\")\n",
+    "      .attr(\"stroke-width\", 1.5)\n",
+    "      .attr(\"d\", lineWhite);\n",
+    "\n",
+    "    svg.append(\"path\")\n",
+    "      .datum(data)\n",
+    "      .attr(\"fill\", \"none\")\n",
+    "      .attr(\"stroke\", \"red\")\n",
+    "      .attr(\"stroke-width\", 1.5)\n",
+    "      .attr(\"d\", lineBlack);\n",
+    "\n",
+    "    // Legend\n",
+    "    svg.append(\"circle\").attr(\"cx\",200).attr(\"cy\",0).attr(\"r\", 6).style(\"fill\", \"steelblue\")\n",
+    "    svg.append(\"circle\").attr(\"cx\",200).attr(\"cy\",20).attr(\"r\", 6).style(\"fill\", \"red\")\n",
+    "    svg.append(\"text\").attr(\"x\", 220).attr(\"y\", 0).text(\"White Individuals\").style(\"font-size\", \"15px\").attr(\"alignment-baseline\",\"middle\")\n",
+    "    svg.append(\"text\").attr(\"x\", 220).attr(\"y\", 20).text(\"Black Individuals\").style(\"font-size\", \"15px\").attr(\"alignment-baseline\",\"middle\")\n",
+    "  }\n",
+    "\n",
+    "  // These are computed values based on `educationLevel`, recalculated whenever `educationLevel` changes\n",
+    "    $: predictedWageWhite = $educationLevel * coef_educ + intercept;\n",
+    "    $: predictedWageBlack = ($educationLevel * coef_educ + intercept) + coef_race_black + ($educationLevel * coef_educ_race_black);\n",
+    "\n",
+    "  </script>\n",
+    "  <h2 style=\"color: red; font-weight: bold;font-style: italic;\">**Feel Free to Play Around and See how Education Affects Wage Differently for Blacks and Whites!**</h2>\n",
+    "  <div>\n",
+    "    <h2>Education Level Input</h2>\n",
+    "    <label for=\"educationLevel\">Years of Education:</label>\n",
+    "    <input type=\"number\" bind:value={$educationLevel} min=\"0\" id=\"educationLevel\" placeholder=\"Change the years of education here\" />\n",
+    "  </div>\n",
+    "  <h2>Predicted Hourly Wage</h2>\n",
+    "  <div id=\"wageWhiteEq\"></div>\n",
+    "  <div id=\"wageBlackEq\"></div>\n",
+    "  <p>For a White individual with {$educationLevel} years of education: ${predictedWageWhite.toFixed(2)}</p>\n",
+    "  <p>For a Black individual with {$educationLevel} years of education: ${predictedWageBlack.toFixed(2)}</p>\n",
+    "  <div class=\"svg-container\">\n",
+    "    <svg id=\"chart\"></svg>\n",
+    "  </div>\n",
+    "  <style>\n",
+    "    input, label {\n",
+    "      font-family: Arial, sans-serif;\n",
+    "      margin: 5px 0;\n",
+    "    }\n",
+    "    #chart {\n",
+    "    display: block;\n",
+    "    margin: auto;\n",
+    "  }\n",
+    "  </style>\n",
+    "\n",
+    "  <div>\n",
+    "    <input type=\"range\" bind:value={$educSelected} min=\"0\" max=\"20\" step=\"1\">\n",
+    "    <span>Education Years: {$educSelected}</span>\n",
+    "  </div>\n",
+    "\n",
+    "\n",
+    "  \n",
+    "  <div>\n",
+    "    <svg id=\"chart\"></svg>\n",
+    "  </div>\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<script>\n",
+    "  import { onMount } from 'svelte';\n",
+    "  import { writable } from 'svelte/store';\n",
+    "  import * as d3 from 'd3';\n",
+    "  import { base } from '$app/paths';\n",
+    "\n",
+    "  let outjsonData = writable([]);\n",
+    "  let filteredData = [];\n",
+    "  let ageSelected = writable(25); // Default value\n",
+    "  let educSelected = writable(10); // Default value\n",
+    "  function renderLatex() {\n",
+    "  const options = {\n",
+    "    throwOnError: false\n",
+    "    };\n",
+    "    katex.render(`\\\\text{Predicted Wage for White Individuals: } Wage = ${intercept} + (${coef_educ} \\\\times Education)`, document.getElementById('wageWhiteEq'), options);\n",
+    "    katex.render(`\\\\text{Predicted Wage for Black Individuals: } Wage = ${intercept} + (${coef_educ} \\\\times Education) + ${coef_race_black} + (${coef_educ_race_black} \\\\times Education)`, document.getElementById('wageBlackEq'), options);\n",
+    "  }\n",
+    "  onMount(async () => {\n",
+    "    const response = await fetch(`${base}/output.json`);\n",
+    "    outjsonData.set(await response.json());\n",
+    "    renderLatex();\n",
+    "\n",
+    "    drawCombinedGraph();\n",
+    "  });\n",
+    "  ///////\n",
+    "  let intercept = -16.3064; // placeholder for intercept from the model\n",
+    "  let coef_educ = 3.6208; // placeholder for education coefficient from the model\n",
+    "  let coef_race_black = -0.0658; // placeholder for race (Black) coefficient from the model\n",
+    "  let coef_educ_race_black = -0.3298;\n",
+    "  let educationLevel = writable();\n",
+    "\n",
+    "  // Function to calculate predicted hourly wage for White individuals\n",
+    "  function predictWageWhite(education) {\n",
+    "    return intercept + coef_educ * education;\n",
+    "  }\n",
+    "\n",
+    "  // Function to calculate predicted hourly wage for Black individuals\n",
+    "  function predictWageBlack(education) {\n",
+    "    return intercept + coef_educ * education + coef_race_black + coef_educ_race_black * education;\n",
+    "  }\n",
+    "  $: $educSelected, drawCombinedGraph();\n",
+    "  function drawCombinedGraph() {\n",
+    "  // Clear existing graph\n",
+    "  const educationLevel = $educSelected;\n",
+    "  d3.select(\"#chart\").selectAll(\"*\").remove();\n",
+    "\n",
+    "  const svgWidth = 500;\n",
+    "  const svgHeight = 450;\n",
+    "  const margin = {top: 40, right: 30, bottom: 70, left: 60},\n",
+    "        width = svgWidth - margin.left - margin.right,\n",
+    "        height = svgHeight - margin.top - margin.bottom;\n",
+    "\n",
+    "  const svg = d3.select(\"#chart\")\n",
+    "                .attr(\"width\", svgWidth)\n",
+    "                .attr(\"height\", svgHeight)\n",
+    "                .append(\"g\")\n",
+    "                .attr(\"transform\", `translate(${margin.left},${margin.top})`);\n",
+    "\n",
+    "  // Data generation for both lines\n",
+    "  let data = d3.range(0, 21).map(function(d) {\n",
+    "    return {education: d, wageWhite: intercept + coef_educ * d, wageBlack: intercept + coef_educ * d + coef_race_black + coef_educ_race_black * d};\n",
+    "  });\n",
+    "  const predictedWageWhite = predictWageWhite($educSelected);\n",
+    "  const predictedWageBlack = predictWageBlack($educSelected);\n",
+    "  // Add X axis\n",
+    "  const x = d3.scaleLinear()\n",
+    "    .domain([0, 20])\n",
+    "    .range([ 0, width ]);\n",
+    "  svg.append(\"g\")\n",
+    "    .attr(\"transform\", `translate(0, ${height})`)\n",
+    "    .call(d3.axisBottom(x))\n",
+    "    .append(\"text\")\n",
+    "    .attr(\"x\", width / 2)\n",
+    "    .attr(\"y\", 40)\n",
+    "    .attr(\"fill\", \"black\")\n",
+    "    .style(\"text-anchor\", \"middle\")\n",
+    "    .text(\"Years of Education\");\n",
+    "\n",
+    "  // Add Y axis\n",
+    "  const y = d3.scaleLinear()\n",
+    "    .domain([-20, d3.max(data, d => Math.max(d.wageWhite, d.wageBlack))])\n",
+    "    .range([ height, 0 ]);\n",
+    "  svg.append(\"g\")\n",
+    "    .call(d3.axisLeft(y))\n",
+    "    .append(\"text\")\n",
+    "    .attr(\"transform\", \"rotate(-90)\")\n",
+    "    .attr(\"y\", -40)\n",
+    "    .attr(\"x\", -height / 2)\n",
+    "    .attr(\"dy\", \"1em\")\n",
+    "    .attr(\"fill\", \"black\")\n",
+    "    .style(\"text-anchor\", \"middle\")\n",
+    "    .text(\"Predicted Wage\");\n",
+    "\n",
+    "  // Line generators\n",
+    "  const lineWhite = d3.line()\n",
+    "    .x(d => x(d.education))\n",
+    "    .y(d => y(d.wageWhite));\n",
+    "\n",
+    "  const lineBlack = d3.line()\n",
+    "    .x(d => x(d.education))\n",
+    "    .y(d => y(d.wageBlack));\n",
+    "\n",
+    "  // Draw lines\n",
+    "  svg.append(\"path\")\n",
+    "    .datum(data)\n",
+    "    .attr(\"fill\", \"none\")\n",
+    "    .attr(\"stroke\", \"steelblue\")\n",
+    "    .attr(\"stroke-width\", 1.5)\n",
+    "    .attr(\"d\", lineWhite);\n",
+    "\n",
+    "  svg.append(\"path\")\n",
+    "    .datum(data)\n",
+    "    .attr(\"fill\", \"none\")\n",
+    "    .attr(\"stroke\", \"red\")\n",
+    "    .attr(\"stroke-width\", 1.5)\n",
+    "    .attr(\"d\", lineBlack);\n",
+    "\n",
+    "  // Legend\n",
+    "  svg.append(\"circle\").attr(\"cx\",200).attr(\"cy\",0).attr(\"r\", 6).style(\"fill\", \"steelblue\")\n",
+    "  svg.append(\"circle\").attr(\"cx\",200).attr(\"cy\",20).attr(\"r\", 6).style(\"fill\", \"red\")\n",
+    "  svg.append(\"text\").attr(\"x\", 220).attr(\"y\", 0).text(\"White Individuals\").style(\"font-size\", \"15px\").attr(\"alignment-baseline\",\"middle\")\n",
+    "  svg.append(\"text\").attr(\"x\", 220).attr(\"y\", 20).text(\"Black Individuals\").style(\"font-size\", \"15px\").attr(\"alignment-baseline\",\"middle\")\n",
+    "  svg.append(\"circle\")\n",
+    "    .attr(\"cx\", x($educSelected))\n",
+    "    .attr(\"cy\", y(predictedWageWhite))\n",
+    "    .attr(\"r\", 5)\n",
+    "    .style(\"fill\", \"orange\"); // Use a distinct color\n",
+    "\n",
+    "  // Label or arrow pointing to the White prediction marker\n",
+    "  svg.append(\"text\")\n",
+    "    .attr(\"x\", x($educSelected))\n",
+    "    .attr(\"y\", y(predictedWageWhite) - 10) // Adjust position as needed\n",
+    "    .text(\"White Prediction\")\n",
+    "    .style(\"font-size\", \"12px\")\n",
+    "    .attr(\"text-anchor\", \"middle\");\n",
+    "\n",
+    "  // For Black Individuals\n",
+    "  svg.append(\"circle\")\n",
+    "    .attr(\"cx\", x($educSelected))\n",
+    "    .attr(\"cy\", y(predictedWageBlack))\n",
+    "    .attr(\"r\", 5)\n",
+    "    .style(\"fill\", \"green\"); // Use a distinct color\n",
+    "\n",
+    "  // Label or arrow pointing to the Black prediction marker\n",
+    "  svg.append(\"text\")\n",
+    "    .attr(\"x\", x($educSelected))\n",
+    "    .attr(\"y\", y(predictedWageBlack) - 10) // Adjust position as needed\n",
+    "    .text(\"Black Prediction\")\n",
+    "    .style(\"font-size\", \"12px\")\n",
+    "    .attr(\"text-anchor\", \"middle\");\n",
+    "}\n",
+    "\n",
+    "// These are computed values based on `educationLevel`, recalculated whenever `educationLevel` changes\n",
+    "  $: predictedWageWhite = $educationLevel * coef_educ + intercept;\n",
+    "  $: predictedWageBlack = ($educationLevel * coef_educ + intercept) + coef_race_black + ($educationLevel * coef_educ_race_black);\n",
+    "\n",
+    "</script>\n",
+    "<h2 style=\"color: red; font-weight: bold;font-style: italic;\">**Feel Free to Play Around and See how Education Affects Wage Differently for Blacks and Whites!**</h2>\n",
+    "<div>\n",
+    "  <h2>Education Level Input</h2>\n",
+    "  <label for=\"educationLevel\">Years of Education:</label>\n",
+    "  <input type=\"number\" bind:value={$educationLevel} min=\"0\" id=\"educationLevel\" placeholder=\"Change the years of education here\" />\n",
+    "</div>\n",
+    "<h2>Predicted Hourly Wage</h2>\n",
+    "<div id=\"wageWhiteEq\"></div>\n",
+    "<div id=\"wageBlackEq\"></div>\n",
+    "<p>For a White individual with {$educationLevel} years of education: ${predictedWageWhite.toFixed(2)}</p>\n",
+    "<p>For a Black individual with {$educationLevel} years of education: ${predictedWageBlack.toFixed(2)}</p>\n",
+    "<div class=\"svg-container\">\n",
+    "  <svg id=\"chart\"></svg>\n",
+    "</div>\n",
+    "<style>\n",
+    "  input, label {\n",
+    "    font-family: Arial, sans-serif;\n",
+    "    margin: 5px 0;\n",
+    "  }\n",
+    "  #chart {\n",
+    "  display: block;\n",
+    "  margin: auto;\n",
+    "}\n",
+    "</style>\n",
+    "\n",
+    "<div>\n",
+    "  <input type=\"range\" bind:value={$educSelected} min=\"0\" max=\"20\" step=\"1\">\n",
+    "  <span>Education Years: {$educSelected}</span>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "<div>\n",
+    "  <svg id=\"chart\"></svg>\n",
+    "</div>\n"
+   ]
   }
  ],
  "metadata": {
